feat(pricing): change

--- a/src/components/pricing-masthead.less
+++ b/src/components/pricing-masthead.less
@@ -1,21 +1,15 @@
 @import '../variables.less';
 
 .pricing-masthead {
-  .coffee-icon-container {
+  .icon-container {
     display: flex;
     justify-content: center;
     align-content: center;
-    border: 2px solid var(--foreground-color);
+    color: var(--foreground-color);
     border-radius: 2rem;
     width: 4rem;
     height: 4rem;
     margin: 0 auto;
-
-    i.coffee.icon {
-      font-size: 2rem;
-      color: #66b6ea;
-      line-height: 4rem;
-    }
   }
 
   article.pricing {
