feat(*): update for v5.9.0

--- a/src/components/pricing-masthead.less
+++ b/src/components/pricing-masthead.less
@@ -1,6 +1,6 @@
 @import '../variables.less';
 
-.pricing-masthead {
+.pricing-masthead.masthead {
   .icon-container {
     display: flex;
     justify-content: center;
