--- a/src/components/pricing-period-section.less
+++ b/src/components/pricing-period-section.less
@@ -2,6 +2,10 @@ section.period-section {
   display: none;
   padding: 2rem 0;
 
+  & > .ui.stackable.grid {
+    gap: 1em;
+  }
+
   &.active {
     display: block;
   }
