--- a/src/components/masthead.less
+++ b/src/components/masthead.less
@@ -1,6 +1,8 @@
 @import '../variables.less';
 
 .masthead {
+  position: relative;
+  overflow: hidden;
   text-align: center;
   border: none;
   background: url(../images/masthead-bg.jpg);
@@ -43,6 +45,15 @@
     margin-top: 1em;
     margin-bottom: 1em;
     line-height: 1.5;
+  }
+
+  video {
+    position: absolute;
+    inset: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
 
   @media (max-width: @mobileBreakpoint) {
