--- a/src/components/pricing-plan-panel.less
+++ b/src/components/pricing-plan-panel.less
@@ -1,17 +1,21 @@
-@import "../variables.less";
+@import '../variables.less';
 
 section.masthead .plan-panel {
   background: #ffffff40;
-  backdrop-filter: blur(10px) saturate(180%);
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07);
+  backdrop-filter: blur(20px) saturate(180%);
+  box-shadow:
+    0 15px 35px rgba(0, 0, 0, 0.1),
+    0 3px 10px rgba(0, 0, 0, 0.07);
   border-radius: 16px;
-  border: 0.5px solid #ffffffb0;
+  border: 0.5px solid #00000030;
+  outline: 1px solid #00000010;
+  outline-offset: -6px;
 
   h2.price {
+    height: 80px;
     font-size: 5em;
     font-weight: lighter;
     margin-top: 0;
-    margin-bottom: -0.5em;
 
     span.currency {
       vertical-align: super;
@@ -31,9 +35,13 @@ section.masthead .plan-panel {
       font-size: 0.8rem;
       vertical-align: middle;
       color: #ff63c3;
+
+      &.negative {
+        color: #00b5ad;
+      }
     }
   }
-  h3.plan {
+  h2.plan {
     font-weight: lighter;
   }
 }
