perf(youtube): lazy load

--- a/src/components/section-fourth.less
+++ b/src/components/section-fourth.less
@@ -12,7 +12,9 @@ section.section-fourth {
     border: 0.5px solid #ffffff60;
     border-radius: 8px;
     margin: 2em 2em 4em 2em;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07);
+    box-shadow:
+      0 15px 35px rgba(0, 0, 0, 0.1),
+      0 3px 10px rgba(0, 0, 0, 0.07);
 
     @media (max-width: @tabletBreakpoint) {
       margin-left: 1rem;
@@ -28,7 +30,7 @@ section.section-fourth {
       width: 100%;
       padding-bottom: 56.25%;
 
-      iframe.video {
+      iframe {
         position: absolute;
         top: 0;
         left: 0;
@@ -37,7 +39,8 @@ section.section-fourth {
 
         border: 0.5px solid #ffffff60;
         border-radius: 8px;
-        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1),
+        box-shadow:
+          0 15px 35px rgba(0, 0, 0, 0.1),
           0 3px 10px rgba(0, 0, 0, 0.07);
       }
     }
@@ -124,10 +127,13 @@ section.section-fourth {
     background: white;
 
     border-radius: 0.2em;
-    box-shadow: rgba(84, 70, 35, 0.15) 0px 2px 8px,
+    box-shadow:
+      rgba(84, 70, 35, 0.15) 0px 2px 8px,
       rgba(84, 70, 35, 0.15) 0px 1px 3px,
       rgba(255, 255, 255, 0.1) 0px 0px 0px 1px;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07),
+    box-shadow:
+      0 15px 35px rgba(0, 0, 0, 0.1),
+      0 3px 10px rgba(0, 0, 0, 0.07),
       rgba(255, 255, 255, 0.3) 0px 0px 0px 1px;
 
     video {
