fix(onboarding): let them download the demo first

--- a/src/components/top-masthead.less
+++ b/src/components/top-masthead.less
@@ -36,6 +36,9 @@
 
   .headline {
     margin-bottom: 2em;
+    span.no-signup-required {
+      color: hsla(0deg, 0%, 100%, 60%);
+    }
   }
 
   .screenshot-container {
