--- a/src/components/pricing-why-a-subscription.less
+++ b/src/components/pricing-why-a-subscription.less
@@ -1,6 +1,13 @@
 @import '../variables.less';
 
 section#pricing-why {
+  summary {
+    cursor: pointer;
+    font-size: 1.5em;
+    margin-bottom: 0.6em;
+    line-height: 1.2;
+  }
+
   h2 {
     text-align: center;
     margin-bottom: 1em;
